fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@
   text-align: center;
 }
 
-html, body {
+html,
+body {
   width: 100%;
+  height: 100%;
   font-weight: 100;
   overflow-x: hidden;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 .App-logo {
